--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="929eff">  <td>23/04/22 19:29:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Annotations.abeforeMethod()[pri:0, instance:testngdisc.Annotations@2e6a8155]">&gt;&gt;abeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="929eff">  <td>23/04/22 19:29:27</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Annotations.afterClass()[pri:0, instance:testngdisc.Annotations@2e6a8155]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="929eff">  <td>23/04/22 19:29:27</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Annotations.afterMethod()[pri:0, instance:testngdisc.Annotations@2e6a8155]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="929eff">  <td>23/04/22 19:29:28</td>   <td>717</td> <td title="&lt;&lt;Annotations.afterSuite()[pri:0, instance:testngdisc.Annotations@2e6a8155]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="929eff">  <td>23/04/22 19:29:27</td>   <td>60</td> <td>&nbsp;</td><td title="&lt;&lt;Annotations.afterTest()[pri:0, instance:testngdisc.Annotations@2e6a8155]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="929eff">  <td>23/04/22 19:29:27</td>   <td>-46</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Annotations.beforeClass()[pri:0, instance:testngdisc.Annotations@2e6a8155]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="929eff">  <td>23/04/22 19:29:27</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Annotations.beforeMethod()[pri:0, instance:testngdisc.Annotations@2e6a8155]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="929eff">  <td>23/04/22 19:29:27</td>   <td>-173</td> <td title="&gt;&gt;Annotations.beforeSuite()[pri:0, instance:testngdisc.Annotations@2e6a8155]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="929eff">  <td>23/04/22 19:29:27</td>   <td>-143</td> <td>&nbsp;</td><td title="&gt;&gt;Annotations.beforeTest()[pri:0, instance:testngdisc.Annotations@2e6a8155]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="929eff">  <td>23/04/22 19:29:27</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Annotations.testCase1()[pri:0, instance:testngdisc.Annotations@2e6a8155]">testCase1</td> 
-  <td>main@903525611</td>   <td></td> </tr>
+<tr bgcolor="97b078">  <td>23/04/24 19:56:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParallelTestCaseExecution.searchFlight()[pri:0, instance:testngdisc.ParallelTestCaseExecution@7c711375]">searchFlight</td> 
+  <td>main@2050339061</td>   <td></td> </tr>
 </table>
