--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7babf5">  <td>23/04/21 19:13:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Parameterization.launchBrowser(java.lang.String)[pri:0, instance:testngdisc.Parameterization@57d7f8ca]">launchBrowser</td> 
-  <td>main@2028265136</td>   <td></td> </tr>
-<tr bgcolor="7babf5">  <td>23/04/21 19:13:32</td>   <td>10890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Parameterization.launchBrowser(java.lang.String)[pri:0, instance:testngdisc.Parameterization@290222c1]">launchBrowser</td> 
-  <td>main@2028265136</td>   <td></td> </tr>
-<tr bgcolor="7babf5">  <td>23/04/21 19:13:32</td>   <td>10614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Parameterization.testCase1(java.lang.String)[pri:0, instance:testngdisc.Parameterization@57d7f8ca]">testCase1</td> 
-  <td>main@2028265136</td>   <td></td> </tr>
-<tr bgcolor="7babf5">  <td>23/04/21 19:13:43</td>   <td>21287</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Parameterization.testCase1(java.lang.String)[pri:0, instance:testngdisc.Parameterization@290222c1]">testCase1</td> 
-  <td>main@2028265136</td>   <td></td> </tr>
+<tr bgcolor="97b078">  <td>23/04/24 20:01:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParallelTestCaseExecution.getDetails()[pri:0, instance:testngdisc.ParallelTestCaseExecution@57cf54e1]">getDetails</td> 
+  <td>TestNG-test=Test-1@1709728578</td>   <td></td> </tr>
+<tr bgcolor="97b078">  <td>23/04/24 20:01:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParallelTestCaseExecution.searchFlight()[pri:0, instance:testngdisc.ParallelTestCaseExecution@57cf54e1]">searchFlight</td> 
+  <td>TestNG-test=Test-2@1751800218</td>   <td></td> </tr>
 </table>
